fix: fallback for the quick jump when the title is too long for smaller screens
It will now slide over the title, instead of sliding off the screen.

Also includes a fix to move the title from the header bar to the table
of contents on smaller screens.

--- a/static/search/search-box.css
+++ b/static/search/search-box.css
@@ -177,4 +177,14 @@
 #search-wrapper {
   width: fit-content;
   z-index: 1;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  padding: 0 .5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
 }
